--- a/src/app/global.css
+++ b/src/app/global.css
@@ -10,6 +10,7 @@ p,
 h1,
 h2,
 h3,
+h4,
 strong {
   cursor: default;
 }
@@ -45,6 +46,13 @@ strong {
   }
 }
 
+@media only screen and (min-width: 985px) {
+  .doubtCards {
+    width: calc(100% - 14rem);
+  }
+}
+
+
 @media only screen and (min-width: 1279px) {
   .swiper {
     position: absolute !important;
@@ -56,7 +64,7 @@ strong {
 
   .swiper-wrapper {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
   }
 
   .swiper-button-next {
