--- a/src/app/global.css
+++ b/src/app/global.css
@@ -15,6 +15,20 @@ strong {
   cursor: default;
 }
 
+a {
+  min-width: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #757385;
+  border-radius: 20px;
+  border: 3px solid #F2F5FC;
+}
+
 #carrousel::-webkit-scrollbar {
   display: none;
 }
