--- a/src/app/global.css
+++ b/src/app/global.css
@@ -26,7 +26,7 @@ a {
 ::-webkit-scrollbar-thumb {
   background-color: #757385;
   border-radius: 20px;
-  border: 3px solid #F2F5FC;
+  border: 3px solid #f2f5fc;
 }
 
 #carrousel::-webkit-scrollbar {
@@ -64,7 +64,6 @@ a {
     width: calc(100% - 14rem);
   }
 }
-
 
 @media only screen and (min-width: 1279px) {
   .swiper {
